Fix gallery width on small devices

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,7 +43,7 @@ body {
 
 .tk-gallery.cyclic .items
 {
-	width: 1000%;
+	width: 1000000000%;
 }
 
 .tk-gallery.cyclic .controls 
